# Telemy

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  HANDOFF_STATUS.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  THIRD_PARTY_NOTICES.md  aegis-dock-bridge.js  aegis-dock-browser-host-bootstrap.js  aegis-dock.jsx
aegis-control-plane/: README.md
aegis-control-plane/cmd/api/: main.go  main_test.go
aegis-control-plane/cmd/jobs/: main.go
aegis-control-plane/deploy/advin/: .env.example  deploy.sh  docker-compose.api.yml
aegis-control-plane/internal/api/: auth_handlers.go  auth_handlers_test.go  handlers.go  handlers_stop_test.go  handlers_stream_slots.go  handlers_stream_slots_test.go  router.go
aegis-control-plane/internal/auth/: jwt.go
aegis-control-plane/internal/config/: config.go
aegis-control-plane/internal/dns/: cloudflare.go  cloudflare_test.go
aegis-control-plane/internal/jobs/: runner.go  runner_test.go
aegis-control-plane/internal/metrics/: metrics.go
aegis-control-plane/internal/model/: stream_slots.go  types.go
aegis-control-plane/internal/relay/: aws.go  byor.go  fake.go  pool_provisioner.go  pool_provisioner_test.go  provisioner.go  sls_client.go  sls_client_test.go
aegis-control-plane/internal/store/: store.go  store_relay_pool_integration_test.go  store_stop_test.go  store_stream_slots.go  store_stream_slots_integration_test.go
aegis-control-plane/migrations/: 0003_add_relay_slug.sql  0006_fix_srt_port_default.sql  0007_add_stream_token.sql  0008_auth_sessions.sql  0009_plugin_login_attempts.sql  0010_multi_connection.sql  0010_rename_relay_instance_id.sql  0011_byor_relay_config.sql  0012_free_tier_removal.sql  0013_relay_pool.sql  0014_user_stream_slots.sql  004_add_provision_step.sql  005_add_user_eip.sql
aegis-control-plane/scripts/: relay-user-data.sh
docs/: API_SPEC_v1.md  ARCHITECTURE.md  AUTH_ENTITLEMENT_MODEL.md  CODE_REVIEW_RESOLUTION_2026_03_02.md  CURRENT_STATUS.md  DB_SCHEMA_v1.md  IPC_PROTOCOL_v1.md  OBS_DOCK_THEME_PERSISTENCE.md  OPERATIONS_METRICS.md  QA_CHECKLIST_OBS_CEF_DOCK_ACTION_LOOP.md  QA_CHECKLIST_OBS_DOCK_SCENE_RULES.md  QA_CHECKLIST_RELAY_TELEMETRY.md  README.md  RELAY_DEPLOYMENT.md  STATE_MACHINE_v1.md  TRIAGE_RELAY_VALIDATION.md  VPS_Relay_Server_Comparison.md
docs/archive/: ARCHITECTURE-v0.0.3-FIRST-PASS.md  HANDOFF_HISTORY.md  HANDOFF_STATUS.md  OVERHAUL-v0.0.3.md
docs/future/: 2026-03-18-byor-implementation-spec.md  2026-03-18-phase2-byor-test-plan.md  2026-03-18-relay-strategy-analysis.md  2026-03-18-v005-plan-reviews.md  2026-03-18-v005-plan.md  2026-03-19-v005-plan-revised.md  2026-03-22-stream-slot-spec.md  video-stabilization.md
docs/plans/: 2026-03-01-encoders-uploads-plan.md  2026-03-01-encoders-uploads-section-design.md  2026-03-01-relay-timeout-fix-design.md  2026-03-01-relay-timeout-fix-plan.md  2026-03-03-relay-telemetry-design.md  2026-03-03-relay-telemetry-plan.md  2026-03-04-dock-code-split-design.md  2026-03-04-dock-code-split-plan.md  2026-03-05-per-user-relay-dns-design.md  2026-03-05-per-user-relay-dns-plan.md  2026-03-06-per-link-relay-telemetry-design.md  2026-03-06-per-link-relay-telemetry-plan.md  2026-03-07-relay-provision-progress-design.md  2026-03-07-relay-provision-progress-plan.md  2026-03-20-api-migration-advin.md  2026-03-21-v006-global-relay-mesh-design.md
obs-plugin/: .gitignore  CMakeLists.txt
obs-plugin-shim/: README.md  deploy-to-obs.ps1  dev-cycle.ps1  run-dev-session.ps1  run-strict-cycle.ps1  run-ui-smoke.ps1  stop-dev-session.ps1  validate-obs-log.ps1
obs-plugin-shim/src/: ipc_client.cpp  ipc_client.h  obs_browser_dock_host_scaffold.cpp  obs_plugin_entry.cpp  shim_runtime.cpp  shim_runtime.h
obs-plugin/dock/: aegis-dock-app.js  aegis-dock-bridge-host.js  aegis-dock-bridge.js  aegis-dock-browser-host-bootstrap.js  aegis-dock-entry.jsx  aegis-dock.html  aegis-dock.jsx  connection-components.jsx  constants.js  css.js  ddns-wizard.jsx  encoder-components.jsx  hooks.js  package-lock.json  package.json  relay-mode-selector.jsx  scene-components.jsx  self-hosted-status.jsx  sparkline-hooks.js  sync-dock.sh  telemy-dock-app.js  telemy-dock-bridge-host.js  telemy-dock-bridge.js  telemy-dock-browser-host-bootstrap.js  telemy-dock.html  ui-components.jsx  use-dock-state.js  use-simulated-state.js  utils.js
obs-plugin/src/: bandwidth_checker.cpp  bandwidth_checker.h  chatbot_runtime.cpp  chatbot_runtime.h  config_vault.cpp  config_vault.h  connection_manager.cpp  connection_manager.h  dock_action_dispatch.cpp  dock_action_dispatch.h  dock_js_bridge_api.h  dock_replay_cache.cpp  dock_replay_cache.h  dock_theme.cpp  dock_theme.h  embedded_srtla.cpp  embedded_srtla.h  https_client.cpp  https_client.h  json_helpers.h  metrics_collector.cpp  metrics_collector.h  obs_browser_dock_host_scaffold.cpp  obs_browser_dock_host_scaffold.h  obs_plugin_entry.cpp  relay_client.cpp  relay_client.h  telemy_source.cpp  telemy_source.h  upnp_client.cpp  upnp_client.h
obs-plugin/tests/: CMakeLists.txt  json_helpers_impl.cpp  test_config_vault.cpp  test_connection_manager.cpp  test_json_extract.cpp  test_parse_session_response.cpp
obs-plugin/tests/test_stubs/: obs-module.h
obs-telemetry-bridge/: Cargo.toml  README.md  build.rs  config.example.toml  grafana-dashboard-template.json
obs-telemetry-bridge/.github/workflows/: ci.yml
obs-telemetry-bridge/installer/: setup.iss
obs-telemetry-bridge/src/: aegis_client.rs  main.rs  util.rs
obs-telemetry-bridge/src/aegis/: mod.rs
obs-telemetry-bridge/src/aggregate/: mod.rs
obs-telemetry-bridge/src/app/: mod.rs
obs-telemetry-bridge/src/config/: mod.rs
obs-telemetry-bridge/src/exporters/: mod.rs
obs-telemetry-bridge/src/ipc/: mod.rs
obs-telemetry-bridge/src/metrics/: mod.rs
obs-telemetry-bridge/src/model/: mod.rs
obs-telemetry-bridge/src/security/: mod.rs
obs-telemetry-bridge/src/server/: aegis.rs  dashboard.rs  mod.rs  settings.rs
obs-telemetry-bridge/src/startup/: mod.rs
obs-telemetry-bridge/src/tray/: mod.rs
